2008-01-22  Philip Van Hoof <pvanhoof@gnome.org>

	* Added support for GtkHTML in libtinymailui-gtkhtml. This is highly
	experimental and unfinished at this moment
	* Fixed several compiler warnings, and cleaned up some code

	* This was a minor API change

2008-01-21 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
	
	* fix freeing uninitialized data in camel-imap-folder.c

2008-01-21  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail/tny-send-queue.c
	libtinymail/tny-send-queue.h
	libtinymail-camel/tny-camel-send-queue.c
	libtinymail-camel/tny-camel-send-queue.c:
	(tny_send_queue_cancel): API change, now the cancel method receives a
	flag specifying the action that should be performed on cancelations,
	to remove the messages or just to suspend them
	(thread_main): make the tny_transport_account_send cancellable

2008-01-20  Philip Van Hoof <pvanhoof@gnome.org>

	* Refactoring of all error reporting situations, errors and handling
	of connection failures, reconnecting and getting messages in case of a
	previous connection failure.
	* Several bugfixes related to connection failures
	* Several bugfixes related to connection problems when fetching
	messages
	* POP and IMAP now behave the same in case of connection problems
	while fetching a message (they try to re-authenticate and re-connect)
	* More finegrained error reporting (IO errors, SERVICE errors, SYSTEM
	errors and unknown errors).

	* This was a major API change for all modules

2008-01-19  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed sync when offline transfers took place

2008-01-17  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder:
	(folder_changed): removed a code that was modifying the number of
	cached messages when receiving an IDLE notification of expunged
	headers. It shouldn't be done because Camel was already giving us the
	proper value

2008-01-16  Mark Doffman  <mark.doffman@codethink.co.uk>